spirale 7 pour les cercles

--- a/spirals/p07/web/jeux.html
+++ b/spirals/p07/web/jeux.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="jeux.css">
   </head>
   <body>
-    <h1>Puissance4 spiral06 fixing bugs</h1>
+    <h1>Puissance4 spiral07 Drawing circles</h1>
     
   <div id="sample_container_id"><canvas id="canvas" width="700" height="600"></canvas></div>
     
