--- a/spirals/p07/web/jeux.html
+++ b/spirals/p07/web/jeux.html
@@ -3,11 +3,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Puissance4 game in Dart</title>
+    <title>Connect4 game in Dart</title>
     <link rel="stylesheet" href="jeux.css">
   </head>
   <body>
-    <h1>Puissance4 spiral07 Drawing circles</h1>
+    <h1>Connect4</h1>
     
   <div id="sample_container_id"><canvas id="canvas" width="700" height="600"></canvas></div>
     
@@ -20,7 +20,6 @@
       <button id="bc6">put coin here</button>
       <button id="bc7">put coin here</button>   
     </footer>
-
 
     <script type="application/dart" src="jeux.dart"></script>
     <script src="packages/browser/dart.js"></script>
